--- a/Test.ipynb
+++ b/Test.ipynb
@@ -5,6 +5,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "while True:\n",
+    "    a = int(input('How likely is it that Kogan are having a sale this month from 1-10? '))\n",
+    "    if 1 <= int(a) <= 10:\n",
+    "            break;\n",
+    "    else:\n",
+    "            print (\"Error Invalid Input\")\n",
+    "while True:\n",
+    "    b = int(input('How likely is it that Tom is going to hear about the sale from 1-10? '))\n",
+    "    if 1 <= int(b) <= 10:\n",
+    "            break;\n",
+    "    else:\n",
+    "            print (\"Error Invalid Input\")\n",
+    "if a < 5 and b < 5:\n",
+    "    print('Tom is spending money')\n",
+    "else:\n",
+    "    print(\"Dave wins this time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
