--- a/Test.ipynb
+++ b/Test.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "while True:\n",
@@ -18,10 +20,49 @@
     "            break;\n",
     "    else:\n",
     "            print (\"Error Invalid Input\")\n",
-    "if a < 5 and b < 5:\n",
+    "            \n",
+    "print(a)\n",
+    "print(b)\n",
+    "\n",
+    "            \n",
+    "if a > 5 and b > 5:\n",
     "    print('Tom is spending money')\n",
     "else:\n",
     "    print(\"Dave wins this time\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First Name Raj\n",
+      "Height in cm 176\n",
+      "Weight in kg 96\n",
+      "Raj BMI 30.99\n",
+      "Raj is overweight.\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('First Name ')\n",
+    "height_cm = int(input('Height in cm '))\n",
+    "weight_kg = int(input('Weight in kg '))\n",
+    "\n",
+    "bmi = weight_kg / ((height_cm / 100) ** 2)\n",
+    "bmi = round(bmi, 2) \n",
+    "print(name, 'BMI', bmi)\n",
+    "\n",
+    "if bmi <= 18.5:\n",
+    "    print(name, 'is underweight.')\n",
+    "elif bmi >= 18.5 and bmi < 25:\n",
+    "    print(name, 'is at ideal weight.')\n",
+    "else:\n",
+    "    print(name, \"is overweight.\")"
    ]
   },
   {
